--- a/com.Trobin/pom.xml
+++ b/com.Trobin/pom.xml
@@ -4,6 +4,27 @@
   <artifactId>com.Trobin</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.10.1</version>
+          <configuration>
+            <!-- put your configurations here -->
+          </configuration>
+        </plugin>
+            <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.0.0-M7</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+  
   <dependencies>
   <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
